--- a/styles/style.css
+++ b/styles/style.css
@@ -55,11 +55,20 @@ body {
 	background: var(--background);
   max-width: 72ch;
   margin: 0 8em;
-  font-size: 21px;
+  font-size: 18.5px;
+}
+
+body h1:first-child {
+  margin: 0;
+  border: none;
 }
 
 h1, h2, h3, h4, h5, h6, a {
   font-family:'seismic-shock', sans-serif;
+}
+h1, h2, h3, h4, h5, h6 {
+	border-top: 1px solid #fff8;
+  padding-top: .8em;
 }
 
 /* Headings */
@@ -77,7 +86,7 @@ a { color: var(--links); text-decoration: none; }
 a:hover { text-decoration: underline; }
 
 /* Code blocks (xmp) */
-xmp, pre {
+xmp, pre, textarea {
   background: var(--background);
   color: var(--color);
   padding: 1em;
