--- a/styles/style.css
+++ b/styles/style.css
@@ -106,7 +106,7 @@ h1,
 h2,
 h3 {
 	line-height: 1.3;
-	margin: 2em 0 0.6em;
+	margin: 2em 0 -.3em 0em;
 	padding-top: .4em
 }
 
@@ -163,7 +163,7 @@ ol {
 blockquote {
 	border-left: 4px solid var(--muted);
 	padding-left: 1em;
-	color: #555;
+	color: #d7d7d7;
 	margin: 1em 0;
 }
 
@@ -211,6 +211,13 @@ video {
 }
 
 .caption {
+	font-size: .8em;
+	color: var(--muted);
+}
+
+.footnote {
+	display: grid;
+	grid-template-columns: 4ch auto;
 	font-size: .8em;
 	color: var(--muted);
 }
