--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,12 @@ h3 {
 	font-size: 2.3em;
 }
 
+h4 {
+	font-size: 2em;
+	line-height: 1.3;
+	margin: 2em 0 -.8em 0em;
+}
+
 /* Text */
 p {
 	margin: 0.8em 0;
@@ -191,6 +197,7 @@ img,
 video {
 	margin-top: 1em;
 	max-width: 100%;
+	max-height: 95vh;
 }
 
 .clip {
@@ -231,8 +238,27 @@ video {
 }
 
 .caption {
+	margin-top: -1em;
 	font-size: .8em;
 	color: var(--muted);
+}
+
+.summary {
+	background-color: var(--muted);
+	color: var(--background);
+	padding: 1em;
+}
+
+.summary::before {
+	font-size: .7em;
+	content: "SUMMARY";
+	display: block;
+	padding-bottom: .6em;
+	/* text-decoration: underline; */
+}
+
+.caption::before {
+	content: "^";
 }
 
 .footnote {
